# SkiLens

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  INSTALLATION.md  RELEASE.md
src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: lib.rs  scanner.rs
src-tauri/core/tests/: scanner_compat.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Charts.tsx  Common.tsx  PreferencesModal.tsx  Shell.tsx  Sidebar.tsx  SkillRow.tsx  Toolbar.tsx
src/components/views/: CategoryView.tsx  ColdStartView.tsx  ListView.tsx  OverviewView.tsx  SkillDetail.tsx
src/lib/: api.ts  data.ts  preferences.ts  viewHelpers.ts
